[package]
name = "acala-runtime"
version = "0.5.1"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
smallvec = "1.4.0"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
static_assertions = "1.1.0"
hex-literal = { version = "0.2.1" }

frame-benchmarking = { version = "2.0.0-rc4", default-features = false, optional = true }
frame-executive = { version = "2.0.0-rc4", default-features = false }
frame-support = { version = "2.0.0-rc4", default-features = false }
frame-system = { version = "2.0.0-rc4", default-features = false }
frame-system-rpc-runtime-api = { version = "2.0.0-rc4", default-features = false }
pallet-babe = { version = "2.0.0-rc4", default-features = false }
pallet-balances = { version = "2.0.0-rc4", default-features = false }
pallet-collective = { version = "2.0.0-rc4", default-features = false }
pallet-grandpa = { version = "2.0.0-rc4", default-features = false }
pallet-indices = { version = "2.0.0-rc4", default-features = false }
pallet-membership = { version = "2.0.0-rc4", default-features = false }
pallet-multisig = { version = "2.0.0-rc4", default-features = false }
pallet-randomness-collective-flip = { version = "2.0.0-rc4", default-features = false }
pallet-recovery = { version = "2.0.0-rc4", default-features = false }
pallet-session = { version = "2.0.0-rc4", features = ["historical"], default-features = false }
pallet-staking = { version = "2.0.0-rc4", default-features = false }
pallet-staking-reward-curve = { version = "2.0.0-rc4", default-features = false }
pallet-sudo = { version = "2.0.0-rc4", default-features = false }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc4", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-rc4", default-features = false }
pallet-treasury = { version = "2.0.0-rc4", default-features = false }
pallet-utility = { version = "2.0.0-rc4", default-features = false }
sp-api = { version = "2.0.0-rc4", default-features = false }
sp-application-crypto = { version = "2.0.0-rc4", default-features = false }
sp-block-builder = { version = "2.0.0-rc4", default-features = false }
sp-consensus-babe = { version = "0.8.0-rc4", default-features = false }
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-inherents = { version = "2.0.0-rc4", default-features = false }
sp-io = { version = "2.0.0-rc4", default-features = false }
sp-offchain = { version = "2.0.0-rc4", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
sp-session = { version = "2.0.0-rc4", default-features = false }
sp-staking = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
sp-transaction-pool = { version = "2.0.0-rc4", default-features = false }
sp-version = { version = "2.0.0-rc4", default-features = false }

orml-auction = { path = "../orml/auction", default-features = false }
orml-benchmarking = { path = "../orml/benchmarking", default-features = false, optional = true }
orml-currencies = { path = "../orml/currencies", default-features = false }
orml-oracle = { path = "../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../orml/oracle/rpc/runtime-api", default-features = false }
orml-schedule-update = { path = "../orml/schedule-update", default-features = false }
orml-gradually-update = { path = "../orml/gradually-update", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-traits = { path = "../orml/traits", default-features = false }
orml-vesting = { path = "../orml/vesting", default-features = false }

module-accounts = { path = "../modules/accounts", default-features = false }
module-airdrop = { path = "../modules/airdrop", default-features = false }
module-auction-manager = { path = "../modules/auction_manager", default-features = false }
module-cdp-engine = { path = "../modules/cdp_engine", default-features = false }
module-cdp-treasury = { path = "../modules/cdp_treasury", default-features = false }
module-dex = { path = "../modules/dex", default-features = false }
module-dex-rpc-runtime-api = { path = "../modules/dex/rpc/runtime-api", default-features = false }
module-emergency-shutdown = { path = "../modules/emergency_shutdown", default-features = false }
module-honzon = { path = "../modules/honzon", default-features = false }
module-loans = { path = "../modules/loans", default-features = false }
module-prices = { path = "../modules/prices", default-features = false }
module-primitives = { path = "../modules/primitives", default-features = false }
module-support = { path = "../modules/support", default-features = false }
module-homa = { path = "../modules/homa", default-features = false }
module-nominees-election = { path = "../modules/nominees_election", default-features = false }
module-staking-pool = { path = "../modules/staking_pool", default-features = false }
module-staking-pool-rpc-runtime-api = { path = "../modules/staking_pool/rpc/runtime-api", default-features = false }
module-polkadot-bridge = { path = "../modules/polkadot_bridge", default-features = false }
module-homa-treasury = { path = "../modules/homa_treasury", default-features = false }
module-honzon-benchmarking = { path = "../modules/honzon/benchmarking", default-features = false, optional = true }
module-cdp-engine-benchmarking = { path = "../modules/cdp_engine/benchmarking", default-features = false, optional = true }
module-emergency-shutdown-benchmarking = { path = "../modules/emergency_shutdown/benchmarking", default-features = false, optional = true }
module-auction-manager-benchmarking = { path = "../modules/auction_manager/benchmarking", default-features = false, optional = true }

ecosystem-renvm-bridge = { path = "../ecosystem-modules/ren/renvm-bridge", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[dev-dependencies]
sp-io = { version = "2.0.0-rc4" }

[features]
default = ["std"]
no_std = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-babe/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-grandpa/std",
	"pallet-indices/std",
	"pallet-membership/std",
	"pallet-randomness-collective-flip/std",
	"pallet-recovery/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-multisig/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-babe/std",
	"sp-core/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",

	"orml-auction/std",
	"orml-benchmarking/std",
	"orml-currencies/std",
	"orml-oracle-rpc-runtime-api/std",
	"orml-oracle/std",
	"orml-schedule-update/std",
	"orml-gradually-update/std",
	"orml-tokens/std",
	"orml-traits/std",
	"orml-vesting/std",

	"module-accounts/std",
	"module-airdrop/std",
	"module-auction-manager/std",
	"module-cdp-engine/std",
	"module-cdp-treasury/std",
	"module-dex/std",
	"module-dex-rpc-runtime-api/std",
	"module-emergency-shutdown/std",
	"module-honzon/std",
	"module-loans/std",
	"module-prices/std",
	"module-primitives/std",
	"module-support/std",
	"module-homa/std",
	"module-nominees-election/std",
	"module-staking-pool/std",
	"module-staking-pool-rpc-runtime-api/std",
	"module-polkadot-bridge/std",
	"module-homa-treasury/std",

	"ecosystem-renvm-bridge/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"orml-benchmarking",

	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-collective/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",

	"module-auction-manager-benchmarking",
	"module-cdp-engine-benchmarking",
	"module-cdp-treasury/runtime-benchmarks",
	"module-dex/runtime-benchmarks",
	"module-emergency-shutdown-benchmarking",
	"module-honzon-benchmarking",
]
