[package]
name = "utilities"
version = "0.3.4"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
frame-support = { package = "frame-support", version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
rstd = { package = "sp-std", version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }
runtime-io = { package = "sp-io", version = "2.0.0-alpha.8", default-features = false, git = "https://github.com/paritytech/substrate", tag = "v2.0.0-alpha.8" }

[features]
default = ["std"]
std = [
	"sp-runtime/std",
	"frame-support/std",
	"runtime-io/std",
]
