[package]
name = "ecosystem-chainsafe"
version = "1.0.0"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
support = { package = "module-support", path = "../../modules/support", default-features = false }
primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }
chainbridge = { git = "https://github.com/AcalaNetwork/chainbridge-substrate", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

[dev-dependencies]
orml-tokens = { path = "../../orml/tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"frame-system/std",
	"frame-support/std",
	"sp-std/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"support/std",
	"primitives/std",
	"chainbridge/std",
	"orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
