[package]
name = "ecosystem-starport"
version = "1.0.0"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false  }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false  }
primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
module-support = { path = "../../modules/support", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
module-currencies = { path = "../../modules/currencies", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
	"module-support/std",
	"sp-io/std",
	"pallet-balances/std",
	"module-currencies/std",
	"orml-tokens/std",
]
try-runtime = ["frame-support/try-runtime"]
