[package]
name = "module-accounts"
version = "0.5.0"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
sp-runtime = { version = "2.0.0-rc4", default-features = false }
frame-support = { version = "2.0.0-rc4", default-features = false }
frame-system = { version = "2.0.0-rc4", default-features = false }
sp-std = { version = "2.0.0-rc4", default-features = false }
pallet-transaction-payment = { version = "2.0.0-rc4", default-features = false }
pallet-balances = { version = "2.0.0-rc4", default-features = false }
pallet-timestamp = { version = "2.0.0-rc4", default-features = false }
orml-tokens = { path = "../../orml/tokens", default-features = false }
orml-currencies = { path = "../../orml/currencies", default-features = false }
primitives = { package = "module-primitives", path = "../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-rc4", default-features = false }
sp-io = { version = "2.0.0-rc4", default-features = false }
dex = { package = "module-dex", path = "../dex", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"orml-tokens/std",
	"orml-currencies/std",
	"pallet-transaction-payment/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"primitives/std",
	"support/std",
	"orml-traits/std",
]
