[package]
name = "module-aggregated-dex"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
orml-traits = { workspace = true }
module-support = { workspace = true }
primitives = { workspace = true }
nutsfinance-stable-asset = { workspace = true }
module-dex = { workspace = true }
orml-tokens = { workspace = true }

[dev-dependencies]
orml-tokens = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"module-dex/std",
	"nutsfinance-stable-asset/std",
	"orml-tokens/std",
	"orml-traits/std",
	"primitives/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"module-dex/try-runtime",
]
