[package]
name = "module-auction-manager"
version = "2.22.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-traits = { workspace = true }
orml-utilities = { workspace = true }
module-support = { workspace = true }
primitives = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
pallet-balances = { workspace = true }
orml-auction = { workspace = true }
module-cdp-treasury = { workspace = true }
module-dex = { workspace = true }
orml-tokens = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-utilities/std",
	"primitives/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-support/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
