[package]
name = "module-auction-manager"
version = "0.0.1"
authors = ["Acala Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", default-features = false }
srml-support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", default-features = false }
runtime_io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", default-features = false }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", default-features = false }

traits = { package = "orml-traits", path = "../../orml/traits", default-features = false }
orml-tokens = { package = "orml-tokens", path = "../../orml/tokens", default-features = false }
orml-auction = { package = "orml-auction", path = "../../orml/auction", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/paritytech/substrate.git", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sr-primitives/std",
	"srml-support/std",
	"system/std",
	"runtime_io/std",
	"rstd/std",
	"traits/std",
	"orml-tokens/std",
]
